force-app/main/default/objects/SalesAgreementProduct/fields/PMC_CLM_ProductSubFamily__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_ProductSubFamily__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.PMC_CPQ_ProductSubFamily__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Sub Family</label>
    <type>Text</type>
</CustomField>