force-app/main/default/objects/SalesAgreementProduct/fields/PMC_SS_Annual_Tons__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Annual_Tons__c</fullName>
    <description>States the Annual Tons for Agreement year</description>
    <label>Annual Tons</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>