force-app/main/default/objects/SalesAgreementProduct/fields/PMC_SS_Bin_Space_Tons__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Bin_Space_Tons__c</fullName>
    <description>States the Total Bin Space Tons for Agreement year</description>
    <label>Bin Space Tons</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>