force-app/main/default/objects/SalesAgreementProduct/fields/PMC_SS_Individual_Incentive__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Individual_Incentive__c</fullName>
    <description>This field states the Total Individual Incentive received from a Product.</description>
    <label>Individual Incentive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>