force-app/main/default/objects/SalesAgreementProduct/fields/PMC_SS_MaterialGroup__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_MaterialGroup__c</fullName>
    <description>States the Material Group of the Product</description>
    <formula>TEXT(PricebookEntry.Product2.PMC_CPQ_MaterialGroup__c)</formula>
    <label>Material Group</label>
    <type>Text</type>
</CustomField>