force-app/main/default/objects/SalesAgreementProduct/fields/PMC_SS_Portfolio_Incentive__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Portfolio_Incentive__c</fullName>
    <description>This field states the Total Portfolio Incentive received from a product</description>
    <label>Portfolio Incentive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>