force-app/main/default/objects/SalesAgreementProduct/fields/PMC_SS_Potential_Ex_space_Incentive__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Potential_Ex_space_Incentive__c</fullName>
    <description>This field States the Growth Incentive received from a product</description>
    <label>Potential Ex-space Incentive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>