force-app/main/default/objects/SalesAgreementProduct/fields/PMC_SS_PotentialGrowthIncentive__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_PotentialGrowthIncentive__c</fullName>
    <description>This field states the Growth Incentive received from a product.</description>
    <label>Potential Growth Incentive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>