force-app/main/default/objects/SalesAgreementProduct/fields/PMC_SS_Target__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Target__c</fullName>
    <description>States the Target set for a Product for this year.</description>
    <label>Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>