force-app/main/default/objects/SalesAgreementProduct/validationRules/PMC_SS_RestrictionSalesAgreementProducts.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_SS_RestrictionSalesAgreementProducts</fullName>
    <active>true</active>
    <description>This validation rule will restrict user from adding Sales Agreement Product to Sales Agreement if Sales Agreement Status is other than Draft</description>
    <errorConditionFormula>AND(
NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),
$User.LastName &lt;&gt; &apos;Platform Integration User&apos;, 
NOT(
ISPICKVAL(SalesAgreement.Status , &quot;Draft&quot;))
)</errorConditionFormula>
    <errorMessage>Sales Agreement Product cannot be added or updated at this stage. Please Amend this Sales Agreement</errorMessage>
</ValidationRule>